program6.output
Grammar

    0 $accept: input $end

    1 input: program

    2 program: program classdec
    3        | classdec
    4        | error

    5 classdec: classstart classbody
    6         | classstart error

    7 classstart: CLASS ID
    8           | CLASS error

    9 classbody: LBRACE vardecs constructordecs methoddecs RBRACE
   10          | error vardecs constructordecs methoddecs RBRACE
   11          | error error constructordecs methoddecs RBRACE
   12          | error vardecs error methoddecs RBRACE
   13          | error vardecs constructordecs error RBRACE
   14          | error vardecs constructordecs methoddecs error
   15          | LBRACE error error methoddecs RBRACE
   16          | LBRACE error constructordecs error RBRACE
   17          | LBRACE error constructordecs methoddecs error
   18          | LBRACE vardecs error error RBRACE
   19          | LBRACE vardecs error methoddecs error
   20          | LBRACE vardecs constructordecs error error
   21          | error error error methoddecs RBRACE
   22          | error error constructordecs error RBRACE
   23          | error vardecs error error RBRACE
   24          | LBRACE error error error RBRACE
   25          | error vardecs error methoddecs error
   26          | LBRACE error error methoddecs error
   27          | LBRACE error constructordecs error error
   28          | LBRACE vardecs error error error
   29          | error error error error RBRACE
   30          | error error error methoddecs error
   31          | error error constructordecs error error
   32          | error vardecs error error error
   33          | LBRACE error error error error
   34          | error error error error error
   35          | LBRACE error constructordecs methoddecs RBRACE
   36          | LBRACE vardecs error methoddecs RBRACE
   37          | LBRACE vardecs constructordecs error RBRACE
   38          | LBRACE vardecs constructordecs methoddecs error
   39          | LBRACE vardecs constructordecs RBRACE
   40          | LBRACE vardecs methoddecs RBRACE
   41          | LBRACE vardecs error RBRACE
   42          | LBRACE vardecs RBRACE
   43          | LBRACE constructordecs methoddecs RBRACE
   44          | error constructordecs methoddecs RBRACE
   45          | LBRACE error methoddecs RBRACE
   46          | LBRACE constructordecs error RBRACE
   47          | LBRACE constructordecs methoddecs error
   48          | LBRACE constructordecs RBRACE
   49          | LBRACE methoddecs RBRACE
   50          | LBRACE error RBRACE
   51          | LBRACE methoddecs error
   52          | error methoddecs RBRACE
   53          | LBRACE constructordecs error
   54          | error constructordecs RBRACE
   55          | LBRACE RBRACE
   56          | error RBRACE
   57          | LBRACE error

   58 vardecs: vardecs vardec
   59        | vardec

   60 vardec: type ID SEMI
   61       | type error SEMI
   62       | type ID error
   63       | idbrack ID SEMI
   64       | idbrack error SEMI
   65       | idbrack ID error

   66 type: simpletype
   67     | type LBRACK RBRACK
   68     | type error RBRACK
   69     | type LBRACK error

   70 simpletype: INT

   71 constructordecs: constructordecs constructordec
   72                | constructordec

   73 constructordec: constructorstart block
   74               | constructorstart error

   75 constructorstart: ID LPAREN RPAREN
   76                 | ID LPAREN parameterlist RPAREN
   77                 | ID LPAREN error RPAREN
   78                 | ID LPAREN error
   79                 | ID LPAREN parameterlist error

   80 methoddecs: methoddecs methoddec
   81           | methoddecs error
   82           | methoddec

   83 methoddec: methodstart block
   84          | error block

   85 methodstart: type ID LPAREN parameterlist RPAREN
   86            | type error LPAREN parameterlist RPAREN
   87            | type error LPAREN error RPAREN
   88            | type ID LPAREN parameterlist error
   89            | type ID LPAREN error RPAREN
   90            | type ID LPAREN error error
   91            | type ID LPAREN RPAREN
   92            | type ID LPAREN error
   93            | type ID error
   94            | VOID ID LPAREN parameterlist RPAREN
   95            | VOID error LPAREN parameterlist RPAREN
   96            | VOID ID error parameterlist RPAREN
   97            | VOID ID LPAREN error RPAREN
   98            | VOID ID LPAREN parameterlist error
   99            | VOID error LPAREN error RPAREN
  100            | VOID ID LPAREN RPAREN
  101            | VOID ID LPAREN error
  102            | VOID ID error
  103            | idbrack ID LPAREN parameterlist RPAREN
  104            | idbrack error LPAREN parameterlist RPAREN
  105            | idbrack ID LPAREN error RPAREN
  106            | idbrack ID LPAREN parameterlist error
  107            | VOID MAIN LPAREN RPAREN
  108            | INT MAIN LPAREN RPAREN

  109 parameterlist: parameter
  110              | parameterlist COMMA parameter
  111              | error COMMA parameter
  112              | parameterlist COMMA error

  113 parameter: type ID
  114          | idbrack ID

  115 stmtblock: stmtblockstart localvardecs stmts RBRACE
  116          | stmtblockstart error stmts RBRACE
  117          | stmtblockstart localvardecs error RBRACE
  118          | stmtblockstart error error RBRACE
  119          | stmtblockstart localvardecs RBRACE
  120          | stmtblockstart stmts RBRACE
  121          | stmtblockstart error RBRACE
  122          | stmtblockstart RBRACE

  123 stmtblockstart: LBRACE

  124 block: LBRACE localvardecs stmts RBRACE
  125      | LBRACE error stmts RBRACE
  126      | LBRACE localvardecs error RBRACE
  127      | LBRACE error error RBRACE
  128      | LBRACE localvardecs RBRACE
  129      | LBRACE stmts RBRACE
  130      | LBRACE error RBRACE
  131      | LBRACE RBRACE

  132 localvardecs: localvardecs localvardec
  133             | localvardecs error
  134             | localvardec

  135 localvardec: type ID SEMI
  136            | type error SEMI
  137            | type ID error
  138            | idbrack ID SEMI
  139            | idbrack error SEMI
  140            | idbrack ID error

  141 stmts: stmts stmt
  142      | stmts error
  143      | stmt

  144 stmt: SEMI
  145     | name ASSIGN exp SEMI
  146     | error ASSIGN exp SEMI
  147     | name ASSIGN error SEMI
  148     | name ASSIGN exp error
  149     | name LPAREN arglist RPAREN SEMI
  150     | name LPAREN error RPAREN SEMI
  151     | name LPAREN arglist RPAREN error
  152     | PRINT LPAREN arglist RPAREN SEMI
  153     | PRINT LPAREN error RPAREN SEMI
  154     | PRINT LPAREN arglist RPAREN error
  155     | conditionalstmt
  156     | WHILE LPAREN exp RPAREN stmt
  157     | WHILE error exp RPAREN stmt
  158     | WHILE LPAREN error RPAREN stmt
  159     | WHILE LPAREN exp error stmt
  160     | WHILE LPAREN exp RPAREN error
  161     | RETURN exp SEMI
  162     | RETURN SEMI
  163     | RETURN error
  164     | stmtblock

  165 name: THIS
  166     | ID
  167     | name DOT ID
  168     | name DOT error
  169     | name bracketexp

  170 arglist: exp
  171        | arglist COMMA exp
  172        | %empty

  173 conditionalstmt: IF LPAREN exp RPAREN stmt
  174                | IF LPAREN error RPAREN stmt
  175                | IF LPAREN exp RPAREN error
  176                | IF LPAREN error RPAREN error
  177                | IF LPAREN exp RPAREN stmt ELSE stmt
  178                | IF LPAREN error RPAREN stmt ELSE stmt
  179                | IF LPAREN exp RPAREN error ELSE stmt
  180                | IF LPAREN exp RPAREN stmt ELSE error

  181 exp: name
  182    | NUMBER
  183    | NULLT
  184    | name LPAREN arglist RPAREN
  185    | name LPAREN error RPAREN
  186    | READ LPAREN RPAREN
  187    | READ error RPAREN
  188    | READ LPAREN error
  189    | newexp
  190    | PLUS exp
  191    | PLUS error
  192    | MINUS exp
  193    | MINUS error
  194    | NOT exp
  195    | NOT error
  196    | exp EQ exp
  197    | error EQ exp
  198    | exp NE exp
  199    | error NE exp
  200    | exp LE exp
  201    | error LE exp
  202    | exp GE exp
  203    | error GE exp
  204    | exp LT exp
  205    | error LT exp
  206    | exp GT exp
  207    | error GT exp
  208    | exp PLUS exp
  209    | error PLUS exp
  210    | exp MINUS exp
  211    | error MINUS exp
  212    | exp OR exp
  213    | error OR exp
  214    | exp TIMES exp
  215    | error TIMES exp
  216    | exp DIV exp
  217    | error DIV exp
  218    | exp MOD exp
  219    | error MOD exp
  220    | exp AND exp
  221    | error AND exp
  222    | LPAREN exp RPAREN
  223    | LPAREN error RPAREN
  224    | LPAREN exp error

  225 newexp: NEW ID LPAREN arglist RPAREN
  226       | NEW error LPAREN arglist RPAREN
  227       | NEW ID error arglist RPAREN
  228       | NEW ID LPAREN error RPAREN
  229       | NEW simpletype bracketexps multibrackets
  230       | NEW error bracketexps multibrackets
  231       | NEW simpletype error multibrackets
  232       | NEW ID bracketexps multibrackets
  233       | NEW simpletype bracketexps
  234       | NEW error bracketexps
  235       | NEW ID bracketexps

  236 bracketexps: bracketexp
  237            | bracketexps bracketexp

  238 bracketexp: LBRACK exp RBRACK
  239           | LBRACK error RBRACK
  240           | LBRACK exp error

  241 multibrackets: LBRACK RBRACK
  242              | multibrackets LBRACK RBRACK
  243              | multibrackets LBRACK error

  244 idbrack: ID
  245        | ID multibrackets


Terminals, with rules where they appear

$end (0) 0
error (256) 4 6 8 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26
    27 28 29 30 31 32 33 34 35 36 37 38 41 44 45 46 47 50 51 52 53
    54 56 57 61 62 64 65 68 69 74 77 78 79 81 84 86 87 88 89 90 92
    93 95 96 97 98 99 101 102 104 105 106 111 112 116 117 118 121 125
    126 127 130 133 136 137 139 140 142 146 147 148 150 151 153 154
    157 158 159 160 163 168 174 175 176 178 179 180 185 187 188 191
    193 195 197 199 201 203 205 207 209 211 213 215 217 219 221 223
    224 226 227 228 230 231 234 239 240 243
VOID (258) 94 95 96 97 98 99 100 101 102 107
CLASS (259) 7 8
RETURN (260) 161 162 163
WHILE (261) 156 157 158 159 160
PRINT (262) 152 153 154
SEMI (263) 60 61 63 64 135 136 138 139 144 145 146 147 149 150 152
    153 161 162
ELSE (264) 177 178 179 180
IF (265) 173 174 175 176 177 178 179 180
ASSIGN (266) 145 146 147 148
READ (267) 186 187 188
NULLT (268) 183
DOT (269) 167 168
THIS (270) 165
INT (271) 70 108
NEW (272) 225 226 227 228 229 230 231 232 233 234 235
MAIN (273) 107 108
COMMA (274) 110 111 112 171
NUMBER (275) 182
ID (276) 7 60 62 63 65 75 76 77 78 79 85 88 89 90 91 92 93 94 96 97
    98 100 101 102 103 105 106 113 114 135 137 138 140 166 167 225
    227 228 232 235 244 245
RBRACK (277) 67 68 238 239 241 242
LPAREN (278) 75 76 77 78 79 85 86 87 88 89 90 91 92 94 95 97 98 99
    100 101 103 104 105 106 107 108 149 150 151 152 153 154 156 158
    159 160 173 174 175 176 177 178 179 180 184 185 186 188 222 223
    224 225 226 228
RPAREN (279) 75 76 77 85 86 87 89 91 94 95 96 97 99 100 103 104 105
    107 108 149 150 151 152 153 154 156 157 158 160 173 174 175 176
    177 178 179 180 184 185 186 187 222 223 225 226 227 228
LBRACE (280) 9 15 16 17 18 19 20 24 26 27 28 33 35 36 37 38 39 40 41
    42 43 45 46 47 48 49 50 51 53 55 57 123 124 125 126 127 128 129
    130 131
EQ (281) 196 197
NE (282) 198 199
LE (283) 200 201
GE (284) 202 203
LT (285) 204 205
GT (286) 206 207
PLUS (287) 190 191 208 209
MINUS (288) 192 193 210 211
OR (289) 212 213
TIMES (290) 214 215
DIV (291) 216 217
MOD (292) 218 219
AND (293) 220 221
NOT (294) 194 195
UNARYOP (295)
LBRACK (296) 67 69 238 239 240 241 242 243
RBRACE (297) 9 10 11 12 13 15 16 18 21 22 23 24 29 35 36 37 39 40 41
    42 43 44 45 46 48 49 50 52 54 55 56 115 116 117 118 119 120 121
    122 124 125 126 127 128 129 130 131


Nonterminals, with rules where they appear

$accept (43)
    on left: 0
input (44)
    on left: 1, on right: 0
program (45)
    on left: 2 3 4, on right: 1 2
classdec (46)
    on left: 5 6, on right: 2 3
classstart (47)
    on left: 7 8, on right: 5 6
classbody (48)
    on left: 9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26 27
    28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48
    49 50 51 52 53 54 55 56 57, on right: 5
vardecs (49)
    on left: 58 59, on right: 9 10 12 13 14 18 19 20 23 25 28 32 36
    37 38 39 40 41 42 58
vardec (50)
    on left: 60 61 62 63 64 65, on right: 58 59
type (51)
    on left: 66 67 68 69, on right: 60 61 62 67 68 69 85 86 87 88 89
    90 91 92 93 113 135 136 137
simpletype (52)
    on left: 70, on right: 66 229 231 233
constructordecs (53)
    on left: 71 72, on right: 9 10 11 13 14 16 17 20 22 27 31 35 37
    38 39 43 44 46 47 48 53 54 71
constructordec (54)
    on left: 73 74, on right: 71 72
constructorstart (55)
    on left: 75 76 77 78 79, on right: 73 74
methoddecs (56)
    on left: 80 81 82, on right: 9 10 11 12 14 15 17 19 21 25 26 30
    35 36 38 40 43 44 45 47 49 51 52 80 81
methoddec (57)
    on left: 83 84, on right: 80 82
methodstart (58)
    on left: 85 86 87 88 89 90 91 92 93 94 95 96 97 98 99 100 101 102
    103 104 105 106 107 108, on right: 83
parameterlist (59)
    on left: 109 110 111 112, on right: 76 79 85 86 88 94 95 96 98
    103 104 106 110 112
parameter (60)
    on left: 113 114, on right: 109 110 111
stmtblock (61)
    on left: 115 116 117 118 119 120 121 122, on right: 164
stmtblockstart (62)
    on left: 123, on right: 115 116 117 118 119 120 121 122
block (63)
    on left: 124 125 126 127 128 129 130 131, on right: 73 83 84
localvardecs (64)
    on left: 132 133 134, on right: 115 117 119 124 126 128 132 133
localvardec (65)
    on left: 135 136 137 138 139 140, on right: 132 134
stmts (66)
    on left: 141 142 143, on right: 115 116 120 124 125 129 141 142
stmt (67)
    on left: 144 145 146 147 148 149 150 151 152 153 154 155 156 157
    158 159 160 161 162 163 164, on right: 141 143 156 157 158 159
    173 174 177 178 179 180
name (68)
    on left: 165 166 167 168 169, on right: 145 147 148 149 150 151
    167 168 169 181 184 185
arglist (69)
    on left: 170 171 172, on right: 149 151 152 154 171 184 225 226
    227
conditionalstmt (70)
    on left: 173 174 175 176 177 178 179 180, on right: 155
exp (71)
    on left: 181 182 183 184 185 186 187 188 189 190 191 192 193 194
    195 196 197 198 199 200 201 202 203 204 205 206 207 208 209 210
    211 212 213 214 215 216 217 218 219 220 221 222 223 224, on right:
    145 146 148 156 157 159 160 161 170 171 173 175 177 179 180 190
    192 194 196 197 198 199 200 201 202 203 204 205 206 207 208 209
    210 211 212 213 214 215 216 217 218 219 220 221 222 224 238 240
newexp (72)
    on left: 225 226 227 228 229 230 231 232 233 234 235, on right:
    189
bracketexps (73)
    on left: 236 237, on right: 229 230 232 233 234 235 237
bracketexp (74)
    on left: 238 239 240, on right: 169 236 237
multibrackets (75)
    on left: 241 242 243, on right: 229 230 231 232 242 243 245
idbrack (76)
    on left: 244 245, on right: 63 64 65 103 104 105 106 114 138 139
    140


State 0

    0 $accept: . input $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    input       go to state 3
    program     go to state 4
    classdec    go to state 5
    classstart  go to state 6


State 1

    4 program: error .

    $default  reduce using rule 4 (program)


State 2

    7 classstart: CLASS . ID
    8           | CLASS . error

    error  shift, and go to state 7
    ID     shift, and go to state 8


State 3

    0 $accept: input . $end

    $end  shift, and go to state 9


State 4

    1 input: program .
    2 program: program . classdec

    CLASS  shift, and go to state 2

    $default  reduce using rule 1 (input)

    classdec    go to state 10
    classstart  go to state 6


State 5

    3 program: classdec .

    $default  reduce using rule 3 (program)


State 6

    5 classdec: classstart . classbody
    6         | classstart . error

    error   shift, and go to state 11
    LBRACE  shift, and go to state 12

    classbody  go to state 13


State 7

    8 classstart: CLASS error .

    $default  reduce using rule 8 (classstart)


State 8

    7 classstart: CLASS ID .

    $default  reduce using rule 7 (classstart)


State 9

    0 $accept: input $end .

    $default  accept


State 10

    2 program: program classdec .

    $default  reduce using rule 2 (program)


State 11

    6 classdec: classstart error .
   10 classbody: error . vardecs constructordecs methoddecs RBRACE
   11          | error . error constructordecs methoddecs RBRACE
   12          | error . vardecs error methoddecs RBRACE
   13          | error . vardecs constructordecs error RBRACE
   14          | error . vardecs constructordecs methoddecs error
   21          | error . error error methoddecs RBRACE
   22          | error . error constructordecs error RBRACE
   23          | error . vardecs error error RBRACE
   25          | error . vardecs error methoddecs error
   29          | error . error error error RBRACE
   30          | error . error error methoddecs error
   31          | error . error constructordecs error error
   32          | error . vardecs error error error
   34          | error . error error error error
   44          | error . constructordecs methoddecs RBRACE
   52          | error . methoddecs RBRACE
   54          | error . constructordecs RBRACE
   56          | error . RBRACE

    error   shift, and go to state 14
    VOID    shift, and go to state 15
    INT     shift, and go to state 16
    ID      shift, and go to state 17
    RBRACE  shift, and go to state 18

    $end   reduce using rule 6 (classdec)
    CLASS  reduce using rule 6 (classdec)

    vardecs           go to state 19
    vardec            go to state 20
    type              go to state 21
    simpletype        go to state 22
    constructordecs   go to state 23
    constructordec    go to state 24
    constructorstart  go to state 25
    methoddecs        go to state 26
    methoddec         go to state 27
    methodstart       go to state 28
    idbrack           go to state 29


State 12

    9 classbody: LBRACE . vardecs constructordecs methoddecs RBRACE
   15          | LBRACE . error error methoddecs RBRACE
   16          | LBRACE . error constructordecs error RBRACE
   17          | LBRACE . error constructordecs methoddecs error
   18          | LBRACE . vardecs error error RBRACE
   19          | LBRACE . vardecs error methoddecs error
   20          | LBRACE . vardecs constructordecs error error
   24          | LBRACE . error error error RBRACE
   26          | LBRACE . error error methoddecs error
   27          | LBRACE . error constructordecs error error
   28          | LBRACE . vardecs error error error
   33          | LBRACE . error error error error
   35          | LBRACE . error constructordecs methoddecs RBRACE
   36          | LBRACE . vardecs error methoddecs RBRACE
   37          | LBRACE . vardecs constructordecs error RBRACE
   38          | LBRACE . vardecs constructordecs methoddecs error
   39          | LBRACE . vardecs constructordecs RBRACE
   40          | LBRACE . vardecs methoddecs RBRACE
   41          | LBRACE . vardecs error RBRACE
   42          | LBRACE . vardecs RBRACE
   43          | LBRACE . constructordecs methoddecs RBRACE
   45          | LBRACE . error methoddecs RBRACE
   46          | LBRACE . constructordecs error RBRACE
   47          | LBRACE . constructordecs methoddecs error
   48          | LBRACE . constructordecs RBRACE
   49          | LBRACE . methoddecs RBRACE
   50          | LBRACE . error RBRACE
   51          | LBRACE . methoddecs error
   53          | LBRACE . constructordecs error
   55          | LBRACE . RBRACE
   57          | LBRACE . error

    error   shift, and go to state 30
    VOID    shift, and go to state 15
    INT     shift, and go to state 16
    ID      shift, and go to state 17
    RBRACE  shift, and go to state 31

    vardecs           go to state 32
    vardec            go to state 20
    type              go to state 21
    simpletype        go to state 22
    constructordecs   go to state 33
    constructordec    go to state 24
    constructorstart  go to state 25
    methoddecs        go to state 34
    methoddec         go to state 27
    methodstart       go to state 28
    idbrack           go to state 29


State 13

    5 classdec: classstart classbody .

    $default  reduce using rule 5 (classdec)


State 14

   11 classbody: error error . constructordecs methoddecs RBRACE
   21          | error error . error methoddecs RBRACE
   22          | error error . constructordecs error RBRACE
   29          | error error . error error RBRACE
   30          | error error . error methoddecs error
   31          | error error . constructordecs error error
   34          | error error . error error error
   84 methoddec: error . block

    error   shift, and go to state 35
    ID      shift, and go to state 36
    LBRACE  shift, and go to state 37

    constructordecs   go to state 38
    constructordec    go to state 24
    constructorstart  go to state 25
    block             go to state 39


State 15

   94 methodstart: VOID . ID LPAREN parameterlist RPAREN
   95            | VOID . error LPAREN parameterlist RPAREN
   96            | VOID . ID error parameterlist RPAREN
   97            | VOID . ID LPAREN error RPAREN
   98            | VOID . ID LPAREN parameterlist error
   99            | VOID . error LPAREN error RPAREN
  100            | VOID . ID LPAREN RPAREN
  101            | VOID . ID LPAREN error
  102            | VOID . ID error
  107            | VOID . MAIN LPAREN RPAREN

    error  shift, and go to state 40
    MAIN   shift, and go to state 41
    ID     shift, and go to state 42


State 16

   70 simpletype: INT .
  108 methodstart: INT . MAIN LPAREN RPAREN

    MAIN  shift, and go to state 43

    $default  reduce using rule 70 (simpletype)


State 17

   75 constructorstart: ID . LPAREN RPAREN
   76                 | ID . LPAREN parameterlist RPAREN
   77                 | ID . LPAREN error RPAREN
   78                 | ID . LPAREN error
   79                 | ID . LPAREN parameterlist error
  244 idbrack: ID .
  245        | ID . multibrackets

    LPAREN  shift, and go to state 44
    LBRACK  shift, and go to state 45

    $default  reduce using rule 244 (idbrack)

    multibrackets  go to state 46


State 18

   56 classbody: error RBRACE .

    $default  reduce using rule 56 (classbody)


State 19

   10 classbody: error vardecs . constructordecs methoddecs RBRACE
   12          | error vardecs . error methoddecs RBRACE
   13          | error vardecs . constructordecs error RBRACE
   14          | error vardecs . constructordecs methoddecs error
   23          | error vardecs . error error RBRACE
   25          | error vardecs . error methoddecs error
   32          | error vardecs . error error error
   58 vardecs: vardecs . vardec

    error  shift, and go to state 47
    INT    shift, and go to state 48
    ID     shift, and go to state 17

    vardec            go to state 49
    type              go to state 50
    simpletype        go to state 22
    constructordecs   go to state 51
    constructordec    go to state 24
    constructorstart  go to state 25
    idbrack           go to state 52


State 20

   59 vardecs: vardec .

    $default  reduce using rule 59 (vardecs)


State 21

   60 vardec: type . ID SEMI
   61       | type . error SEMI
   62       | type . ID error
   67 type: type . LBRACK RBRACK
   68     | type . error RBRACK
   69     | type . LBRACK error
   85 methodstart: type . ID LPAREN parameterlist RPAREN
   86            | type . error LPAREN parameterlist RPAREN
   87            | type . error LPAREN error RPAREN
   88            | type . ID LPAREN parameterlist error
   89            | type . ID LPAREN error RPAREN
   90            | type . ID LPAREN error error
   91            | type . ID LPAREN RPAREN
   92            | type . ID LPAREN error
   93            | type . ID error

    error   shift, and go to state 53
    ID      shift, and go to state 54
    LBRACK  shift, and go to state 55


State 22

   66 type: simpletype .

    $default  reduce using rule 66 (type)


State 23

   44 classbody: error constructordecs . methoddecs RBRACE
   54          | error constructordecs . RBRACE
   71 constructordecs: constructordecs . constructordec

    error   shift, and go to state 56
    VOID    shift, and go to state 15
    INT     shift, and go to state 16
    ID      shift, and go to state 17
    RBRACE  shift, and go to state 57

    type              go to state 58
    simpletype        go to state 22
    constructordec    go to state 59
    constructorstart  go to state 25
    methoddecs        go to state 60
    methoddec         go to state 27
    methodstart       go to state 28
    idbrack           go to state 61


State 24

   72 constructordecs: constructordec .

    $default  reduce using rule 72 (constructordecs)


State 25

   73 constructordec: constructorstart . block
   74               | constructorstart . error

    error   shift, and go to state 62
    LBRACE  shift, and go to state 37

    block  go to state 63


State 26

   52 classbody: error methoddecs . RBRACE
   80 methoddecs: methoddecs . methoddec
   81           | methoddecs . error

    error   shift, and go to state 64
    VOID    shift, and go to state 15
    INT     shift, and go to state 16
    ID      shift, and go to state 65
    RBRACE  shift, and go to state 66

    type         go to state 58
    simpletype   go to state 22
    methoddec    go to state 67
    methodstart  go to state 28
    idbrack      go to state 61


State 27

   82 methoddecs: methoddec .

    $default  reduce using rule 82 (methoddecs)


State 28

   83 methoddec: methodstart . block

    LBRACE  shift, and go to state 37

    block  go to state 68


State 29

   63 vardec: idbrack . ID SEMI
   64       | idbrack . error SEMI
   65       | idbrack . ID error
  103 methodstart: idbrack . ID LPAREN parameterlist RPAREN
  104            | idbrack . error LPAREN parameterlist RPAREN
  105            | idbrack . ID LPAREN error RPAREN
  106            | idbrack . ID LPAREN parameterlist error

    error  shift, and go to state 69
    ID     shift, and go to state 70


State 30

   15 classbody: LBRACE error . error methoddecs RBRACE
   16          | LBRACE error . constructordecs error RBRACE
   17          | LBRACE error . constructordecs methoddecs error
   24          | LBRACE error . error error RBRACE
   26          | LBRACE error . error methoddecs error
   27          | LBRACE error . constructordecs error error
   33          | LBRACE error . error error error
   35          | LBRACE error . constructordecs methoddecs RBRACE
   45          | LBRACE error . methoddecs RBRACE
   50          | LBRACE error . RBRACE
   57          | LBRACE error .
   84 methoddec: error . block

    error   shift, and go to state 71
    VOID    shift, and go to state 15
    INT     shift, and go to state 16
    ID      shift, and go to state 17
    LBRACE  shift, and go to state 37
    RBRACE  shift, and go to state 72

    $end   reduce using rule 57 (classbody)
    CLASS  reduce using rule 57 (classbody)

    type              go to state 58
    simpletype        go to state 22
    constructordecs   go to state 73
    constructordec    go to state 24
    constructorstart  go to state 25
    methoddecs        go to state 74
    methoddec         go to state 27
    methodstart       go to state 28
    block             go to state 39
    idbrack           go to state 61


State 31

   55 classbody: LBRACE RBRACE .

    $default  reduce using rule 55 (classbody)


State 32

    9 classbody: LBRACE vardecs . constructordecs methoddecs RBRACE
   18          | LBRACE vardecs . error error RBRACE
   19          | LBRACE vardecs . error methoddecs error
   20          | LBRACE vardecs . constructordecs error error
   28          | LBRACE vardecs . error error error
   36          | LBRACE vardecs . error methoddecs RBRACE
   37          | LBRACE vardecs . constructordecs error RBRACE
   38          | LBRACE vardecs . constructordecs methoddecs error
   39          | LBRACE vardecs . constructordecs RBRACE
   40          | LBRACE vardecs . methoddecs RBRACE
   41          | LBRACE vardecs . error RBRACE
   42          | LBRACE vardecs . RBRACE
   58 vardecs: vardecs . vardec

    error   shift, and go to state 75
    VOID    shift, and go to state 15
    INT     shift, and go to state 16
    ID      shift, and go to state 17
    RBRACE  shift, and go to state 76

    vardec            go to state 49
    type              go to state 21
    simpletype        go to state 22
    constructordecs   go to state 77
    constructordec    go to state 24
    constructorstart  go to state 25
    methoddecs        go to state 78
    methoddec         go to state 27
    methodstart       go to state 28
    idbrack           go to state 29


State 33

   43 classbody: LBRACE constructordecs . methoddecs RBRACE
   46          | LBRACE constructordecs . error RBRACE
   47          | LBRACE constructordecs . methoddecs error
   48          | LBRACE constructordecs . RBRACE
   53          | LBRACE constructordecs . error
   71 constructordecs: constructordecs . constructordec

    error   shift, and go to state 79
    VOID    shift, and go to state 15
    INT     shift, and go to state 16
    ID      shift, and go to state 17
    RBRACE  shift, and go to state 80

    type              go to state 58
    simpletype        go to state 22
    constructordec    go to state 59
    constructorstart  go to state 25
    methoddecs        go to state 81
    methoddec         go to state 27
    methodstart       go to state 28
    idbrack           go to state 61


State 34

   49 classbody: LBRACE methoddecs . RBRACE
   51          | LBRACE methoddecs . error
   80 methoddecs: methoddecs . methoddec
   81           | methoddecs . error

    error   shift, and go to state 82
    VOID    shift, and go to state 15
    INT     shift, and go to state 16
    ID      shift, and go to state 65
    RBRACE  shift, and go to state 83

    type         go to state 58
    simpletype   go to state 22
    methoddec    go to state 67
    methodstart  go to state 28
    idbrack      go to state 61


State 35

   21 classbody: error error error . methoddecs RBRACE
   29          | error error error . error RBRACE
   30          | error error error . methoddecs error
   34          | error error error . error error

    error  shift, and go to state 84
    VOID   shift, and go to state 15
    INT    shift, and go to state 16
    ID     shift, and go to state 65

    type         go to state 58
    simpletype   go to state 22
    methoddecs   go to state 85
    methoddec    go to state 27
    methodstart  go to state 28
    idbrack      go to state 61


State 36

   75 constructorstart: ID . LPAREN RPAREN
   76                 | ID . LPAREN parameterlist RPAREN
   77                 | ID . LPAREN error RPAREN
   78                 | ID . LPAREN error
   79                 | ID . LPAREN parameterlist error

    LPAREN  shift, and go to state 44


State 37

  124 block: LBRACE . localvardecs stmts RBRACE
  125      | LBRACE . error stmts RBRACE
  126      | LBRACE . localvardecs error RBRACE
  127      | LBRACE . error error RBRACE
  128      | LBRACE . localvardecs RBRACE
  129      | LBRACE . stmts RBRACE
  130      | LBRACE . error RBRACE
  131      | LBRACE . RBRACE

    error   shift, and go to state 86
    RETURN  shift, and go to state 87
    WHILE   shift, and go to state 88
    PRINT   shift, and go to state 89
    SEMI    shift, and go to state 90
    IF      shift, and go to state 91
    THIS    shift, and go to state 92
    INT     shift, and go to state 48
    ID      shift, and go to state 93
    LBRACE  shift, and go to state 94
    RBRACE  shift, and go to state 95

    type             go to state 96
    simpletype       go to state 22
    stmtblock        go to state 97
    stmtblockstart   go to state 98
    localvardecs     go to state 99
    localvardec      go to state 100
    stmts            go to state 101
    stmt             go to state 102
    name             go to state 103
    conditionalstmt  go to state 104
    idbrack          go to state 105


State 38

   11 classbody: error error constructordecs . methoddecs RBRACE
   22          | error error constructordecs . error RBRACE
   31          | error error constructordecs . error error
   71 constructordecs: constructordecs . constructordec

    error  shift, and go to state 106
    VOID   shift, and go to state 15
    INT    shift, and go to state 16
    ID     shift, and go to state 17

    type              go to state 58
    simpletype        go to state 22
    constructordec    go to state 59
    constructorstart  go to state 25
    methoddecs        go to state 107
    methoddec         go to state 27
    methodstart       go to state 28
    idbrack           go to state 61


State 39

   84 methoddec: error block .

    $default  reduce using rule 84 (methoddec)


State 40

   95 methodstart: VOID error . LPAREN parameterlist RPAREN
   99            | VOID error . LPAREN error RPAREN

    LPAREN  shift, and go to state 108


State 41

  107 methodstart: VOID MAIN . LPAREN RPAREN

    LPAREN  shift, and go to state 109


State 42

   94 methodstart: VOID ID . LPAREN parameterlist RPAREN
   96            | VOID ID . error parameterlist RPAREN
   97            | VOID ID . LPAREN error RPAREN
   98            | VOID ID . LPAREN parameterlist error
  100            | VOID ID . LPAREN RPAREN
  101            | VOID ID . LPAREN error
  102            | VOID ID . error

    error   shift, and go to state 110
    LPAREN  shift, and go to state 111


State 43

  108 methodstart: INT MAIN . LPAREN RPAREN

    LPAREN  shift, and go to state 112


State 44

   75 constructorstart: ID LPAREN . RPAREN
   76                 | ID LPAREN . parameterlist RPAREN
   77                 | ID LPAREN . error RPAREN
   78                 | ID LPAREN . error
   79                 | ID LPAREN . parameterlist error

    error   shift, and go to state 113
    INT     shift, and go to state 48
    ID      shift, and go to state 65
    RPAREN  shift, and go to state 114

    type           go to state 115
    simpletype     go to state 22
    parameterlist  go to state 116
    parameter      go to state 117
    idbrack        go to state 118


State 45

  241 multibrackets: LBRACK . RBRACK

    RBRACK  shift, and go to state 119


State 46

  242 multibrackets: multibrackets . LBRACK RBRACK
  243              | multibrackets . LBRACK error
  245 idbrack: ID multibrackets .

    LBRACK  shift, and go to state 120

    $default  reduce using rule 245 (idbrack)


State 47

   12 classbody: error vardecs error . methoddecs RBRACE
   23          | error vardecs error . error RBRACE
   25          | error vardecs error . methoddecs error
   32          | error vardecs error . error error

    error  shift, and go to state 121
    VOID   shift, and go to state 15
    INT    shift, and go to state 16
    ID     shift, and go to state 65

    type         go to state 58
    simpletype   go to state 22
    methoddecs   go to state 122
    methoddec    go to state 27
    methodstart  go to state 28
    idbrack      go to state 61


State 48

   70 simpletype: INT .

    $default  reduce using rule 70 (simpletype)


State 49

   58 vardecs: vardecs vardec .

    $default  reduce using rule 58 (vardecs)


State 50

   60 vardec: type . ID SEMI
   61       | type . error SEMI
   62       | type . ID error
   67 type: type . LBRACK RBRACK
   68     | type . error RBRACK
   69     | type . LBRACK error
